updated second-author image

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                 
                                         <tr>
                                           <td align="center">
-                                            <img class="author-image" src="img/https://raw.githubusercontent.com/BVRXNDVRK/Html-mail/main/img/second-author.png" alt="image: first-author" />
+                                            <img class="author-image" src="https://raw.githubusercontent.com/BVRXNDVRK/Html-mail/main/img/second-author.png" alt="image: second-author" />
                                           </td>
                                         </tr>
                                 
